compiler/fir/resolve/testData/resolve/stdlib/j+k/FieldAndGetter.kt
// FILE: JavaClass.java

public class JavaClass {
    protected String field;

    public String getField() {
        return field;
    }
}

// FILE: test.kt

fun test(jc: JavaClass) {
    jc.<!AMBIGUITY!>field<!>
}